--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "axios": "^1.7.1",
     "bootstrap": "^5.3.3",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^11.16.0",
+    "lucide": "^0.469.0",
+    "lucide-react": "^0.469.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
